--- a/src/styles/toolbar.scss
+++ b/src/styles/toolbar.scss
@@ -24,5 +24,4 @@
 
   padding: 0 20px;
   height: 50px;
-  width: 400px;
 }
